tests/fixtures/invalid/pow_list_bytes_int.py
# Cannot call pow() with List[int], Bytes, Int
x = pow([1, 2, 3], b"hello", 1)
